Update Projects section: Update Student Information Management System and replace with Face Detection Management System

--- a/index.html
+++ b/index.html
@@ -362,32 +362,15 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <i class="fas fa-laptop-code"></i>
+                        <i class="fas fa-user-check"></i>
                     </div>
                     <div class="project-content">
-                        <h3>Online Examination System</h3>
-                        <p>Developed a secure web-based examination platform with timed assessments and automated evaluation. Designed dynamic reporting modules for performance analysis and academic insights.</p>
+                        <h3>Face Detection Management System</h3>
+                        <p>Developed a machine learning–based face detection system for identity recognition. Trained the model using multiple image datasets with varied facial angles, lighting conditions, and expressions to improve detection accuracy. Handled feature extraction, model optimization, along with complete technical documentation.</p>
                         <div class="project-tech">
-                            <span>Java</span>
-                            <span>JSP</span>
-                            <span>Servlets</span>
-                            <span>MySQL</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-image">
-                        <i class="fas fa-hospital"></i>
-                    </div>
-                    <div class="project-content">
-                        <h3>Hospital Management System</h3>
-                        <p>Engineered a complete hospital operations system for patient management, scheduling, billing, and medical records. Improved data consistency through transactional processing and modular service architecture.</p>
-                        <div class="project-tech">
-                            <span>Java</span>
-                            <span>JDBC</span>
-                            <span>MySQL</span>
-                            <span>JavaFX</span>
+                            <span>Python</span>
+                            <span>NumPy</span>
+                            <span>Pandas</span>
                         </div>
                     </div>
                 </div>
