Add beautiful starfield background with dropping comets and stars

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 </head>
 <body>
+    <!-- Animated Starfield Background -->
+    <div class="starfield">
+        <div class="starfield-layer starfield-layer-1"></div>
+        <div class="starfield-layer starfield-layer-2"></div>
+        <div class="starfield-layer starfield-layer-3"></div>
+    </div>
+    
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
