Update portfolio summary to Java Backend Engineer focus

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     <span class="greeting">Hello, I'm</span>
                     <span class="name">Nitin Singh Samant</span>
                 </h1>
-                <p class="hero-subtitle">Java Backend Developer & DevOps Engineer</p>
-                <p class="hero-description">Building scalable microservices, REST APIs, and cloud-native automation solutions</p>
+                <p class="hero-subtitle">Java Backend Engineer</p>
+                <p class="hero-description">Specializing in Java, Spring Boot, and REST APIs—building scalable backend systems, improving application performance, and working with cross-functional teams, CI/CD, and cloud technologies.</p>
                 <div class="hero-buttons">
                     <a href="Updated-Latest.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-secondary resume-btn" download="Nitin_Singh_Samant_Resume.pdf">
                         <i class="fas fa-file-pdf"></i> Download Resume
@@ -86,10 +86,9 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>
-                        I'm a dedicated Java Backend Engineer with 2+ years of industry experience at Jio Platforms and over 4 years 
-                        of hands-on experience in Java development. I specialize in building scalable Spring Boot–based enterprise 
-                        applications, designing robust RESTful APIs, and developing SQL-driven backend systems that power critical 
-                        business operations.
+                        Java Backend Engineer specializing in Java, Spring Boot, and REST APIs, with experience building scalable 
+                        backend systems and improving application performance. Skilled in collaborating with cross-functional teams 
+                        and working with CI/CD and cloud technologies.
                     </p>
                     <p>
                         My expertise spans the full software development lifecycle—from designing microservices architecture to 
