--- a/portfolio-link.html
+++ b/portfolio-link.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nitin Singh Samant - Portfolio</title>
-    <meta name="description" content="Portfolio of Nitin Singh Samant - Java Backend Developer & DevOps Engineer">
+    <meta name="description" content="Portfolio of Nitin Singh Samant - Java Backend Engineer specializing in Java, Spring Boot, REST APIs, scalable backend systems, CI/CD and cloud technologies.">
     <style>
         * {
             margin: 0;
@@ -134,7 +134,7 @@
 <body>
     <div class="container">
         <h1 class="name">Nitin Singh Samant</h1>
-        <p class="title">Java Backend Developer & DevOps Engineer</p>
+        <p class="title">Java Backend Engineer</p>
         <a href="https://NITIN-SINGH-2611.github.io/Portfolio_Nitin/" class="link-button" id="portfolioLink">
             View My Portfolio →
         </a>
