Update resume to NITIN_RESUME.pdf

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <p class="hero-subtitle">Java Backend Engineer</p>
                 <p class="hero-description">Specializing in Java, Spring Boot, and REST APIs—building scalable backend systems, improving application performance, and working with cross-functional teams, CI/CD, and cloud technologies.</p>
                 <div class="hero-buttons">
-                    <a href="Updated-Latest.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-secondary resume-btn" download="Nitin_Singh_Samant_Resume.pdf">
+                    <a href="NITIN_RESUME.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-secondary resume-btn" download="Nitin_Singh_Samant_Resume.pdf">
                         <i class="fas fa-file-pdf"></i> Download Resume
                     </a>
                     <a href="#contact" class="btn btn-secondary">Get In Touch</a>
